docs/envoy/v1.18.2/_sources/api-v3/config/listener/v3/udp_listener_config.proto.rst.txt
.. _envoy_v3_api_file_envoy/config/listener/v3/udp_listener_config.proto:

UDP listener config
===================

Listener :ref:`configuration overview <config_listeners>`

.. _envoy_v3_api_msg_config.listener.v3.UdpListenerConfig:

config.listener.v3.UdpListenerConfig
------------------------------------

`[config.listener.v3.UdpListenerConfig proto] <https://github.com/envoyproxy/envoy/blob/v1.18.2/api/envoy/config/listener/v3/udp_listener_config.proto#L19>`_


.. code-block:: json

  {
    "downstream_socket_config": "{...}"
  }

.. _envoy_v3_api_field_config.listener.v3.UdpListenerConfig.downstream_socket_config:

downstream_socket_config
  (:ref:`config.core.v3.UdpSocketConfig <envoy_v3_api_msg_config.core.v3.UdpSocketConfig>`) UDP socket configuration for the listener. The default for
  :ref:`prefer_gro <envoy_v3_api_field_config.core.v3.UdpSocketConfig.prefer_gro>` is false for
  listener sockets. If receiving a large amount of datagrams from a small number of sources, it
  may be worthwhile to enable this option after performance testing.
  
  



.. _envoy_v3_api_msg_config.listener.v3.ActiveRawUdpListenerConfig:

config.listener.v3.ActiveRawUdpListenerConfig
---------------------------------------------

`[config.listener.v3.ActiveRawUdpListenerConfig proto] <https://github.com/envoyproxy/envoy/blob/v1.18.2/api/envoy/config/listener/v3/udp_listener_config.proto#L40>`_




