docs/envoy/v1.20.7/_sources/api-v3/config/listener/v3/udp_listener_config.proto.rst.txt
.. _envoy_v3_api_file_envoy/config/listener/v3/udp_listener_config.proto:

UDP listener config
===================


This documentation is for the Envoy v3 API.

As of Envoy v1.18 the v2 API has been removed and is no longer supported.

If you are upgrading from v2 API config you may wish to view the v2 API documentation:

    :ref:`api/v2/listener/udp_listener_config.proto <v1.17.2:envoy_api_file_envoy/api/v2/listener/udp_listener_config.proto>`


Listener :ref:`configuration overview <config_listeners>`

.. _envoy_v3_api_msg_config.listener.v3.UdpListenerConfig:

config.listener.v3.UdpListenerConfig
------------------------------------

:repo:`[config.listener.v3.UdpListenerConfig proto] <api/envoy/config/listener/v3/udp_listener_config.proto#L19>`


.. code-block:: json

  {
    "downstream_socket_config": "{...}",
    "quic_options": "{...}"
  }

.. _envoy_v3_api_field_config.listener.v3.UdpListenerConfig.downstream_socket_config:

downstream_socket_config
  (:ref:`config.core.v3.UdpSocketConfig <envoy_v3_api_msg_config.core.v3.UdpSocketConfig>`) UDP socket configuration for the listener. The default for
  :ref:`prefer_gro <envoy_v3_api_field_config.core.v3.UdpSocketConfig.prefer_gro>` is false for
  listener sockets. If receiving a large amount of datagrams from a small number of sources, it
  may be worthwhile to enable this option after performance testing.
  
  
.. _envoy_v3_api_field_config.listener.v3.UdpListenerConfig.quic_options:

quic_options
  (:ref:`config.listener.v3.QuicProtocolOptions <envoy_v3_api_msg_config.listener.v3.QuicProtocolOptions>`) Configuration for QUIC protocol. If empty, QUIC will not be enabled on this listener. Set
  to the default object to enable QUIC without modifying any additional options.
  
  .. warning::
    QUIC support is currently alpha and should be used with caution. Please
    see :ref:`here <arch_overview_http3>` for details.
  
  


.. _envoy_v3_api_msg_config.listener.v3.ActiveRawUdpListenerConfig:

config.listener.v3.ActiveRawUdpListenerConfig
---------------------------------------------

:repo:`[config.listener.v3.ActiveRawUdpListenerConfig proto] <api/envoy/config/listener/v3/udp_listener_config.proto#L42>`




